[gd_scene load_steps=3 format=3 uid="uid://duc3mjrijegti"]

[ext_resource type="Script" path="res://Scenes/WorldStructures/Bases/Base.gd" id="1_qfgen"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_thuke"]
size = Vector2(166.667, 168)

[node name="Base" type="Area2D"]
collision_mask = 3
script = ExtResource("1_qfgen")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-5.72205e-06, 1)
scale = Vector2(1.5, 1.5)
shape = SubResource("RectangleShape2D_thuke")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -128.0
offset_top = -128.0
offset_right = 128.0
offset_bottom = 128.0
color = Color(0.831373, 0.658824, 0.219608, 1)

[node name="RegenTimer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true

[node name="AttackMessageCooldown" type="Timer" parent="."]
wait_time = 20.0
one_shot = true

[node name="ActivateBasePopUp" type="Control" parent="."]
layout_mode = 3
anchor_left = 0.217
anchor_top = 0.051
anchor_right = 0.217
anchor_bottom = 0.051
offset_left = -60.0
offset_top = -91.0
offset_right = 68.0
offset_bottom = 79.0

[node name="ColorRect" type="ColorRect" parent="ActivateBasePopUp"]
layout_mode = 0
offset_right = 128.0
offset_bottom = 170.0
color = Color(0.490196, 0.490196, 0.490196, 0.623529)
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="ActivateBasePopUp"]
layout_mode = 0
offset_left = 11.0
offset_top = 61.0
offset_right = 111.0
offset_bottom = 174.0
theme_override_font_sizes/font_size = 16
text = "Cost:
Dirt: 10
Stone: 6
Leaves: 8"
metadata/_edit_lock_ = true

[node name="Label2" type="Label" parent="ActivateBasePopUp"]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.218
anchor_bottom = 1.218
offset_left = -1.0
offset_top = -209.06
offset_right = 126.0
offset_bottom = -150.06
theme_override_font_sizes/font_size = 20
text = "Press \"E\" to
Build Base"
horizontal_alignment = 1
metadata/_edit_lock_ = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="RegenTimer" to="." method="_on_regen_timer_timeout"]
[connection signal="timeout" from="AttackMessageCooldown" to="." method="_on_attack_message_cooldown_timeout"]
